--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -12,7 +12,7 @@
         <!--android:background="@color/colorPrimary"-->
         <!--/>-->
     <FrameLayout
-        android:id="@+id/list_container"
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         >
