--- a/app/src/main/res/layout/preview.xml
+++ b/app/src/main/res/layout/preview.xml
@@ -18,19 +18,22 @@
     <TextView
         android:id="@+id/title"
         android:layout_width="0dp"
+        android:textSize="@dimen/title_text_size"
+        android:textStyle="bold"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="title"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        tools:text="title"
         />
 
     <TextView
         android:id="@+id/author"
+        android:textSize="@dimen/text_regular_size"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
@@ -38,15 +41,17 @@
         android:layout_marginTop="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title"
-        tools:text="author"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintRight_toLeftOf="@+id/date"
-        app:layout_constraintHorizontal_bias="0.0"/>
+        app:layout_constraintHorizontal_bias="0.0"
+        tools:text="author"
+        />
 
 
     <TextView
         android:id="@+id/date"
+        android:textSize="@dimen/text_regular_size"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="8dp"
@@ -70,6 +75,7 @@
 
         <TextView
             android:id="@+id/description"
+            android:textSize="@dimen/text_medium_size"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="@string/lorem_ipsum"
