--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -4,57 +4,60 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/toolbar"
-        android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:background="@color/colorPrimary"
-        android:gravity="end|center_vertical"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        >
-        <TextView
-            android:id="@+id/show_article"
-            android:layout_width="0dp"
-            android:layout_height="56dp"
-            android:layout_weight="1"
-            app:layout_constraintLeft_toRightOf="@+id/back_button"
-            app:layout_constraintTop_toTopOf="parent"
-            android:ellipsize="end"
-            android:paddingRight="16dp"
-            android:textSize="@dimen/title_text_size"
-            android:maxLines="1"
-            android:gravity="center_vertical"
-            android:text="@string/settings_title"
-            android:textStyle="bold"
-            />
-        <ImageButton
-            android:id="@+id/back_button"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            app:srcCompat="@drawable/ic_arrow_back"
-
-            android:background="?attr/selectableItemBackground"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
-    </android.support.constraint.ConstraintLayout>
+    android:layout_height="match_parent">
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="8dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        >
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_margin="8dp"
+        android:layout_marginTop="32dp"
+        android:id="@+id/textInputLayout">
         <EditText
+            android:id="@+id/feed_url"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="textUri"
+            android:imeOptions="actionDone"
+            android:hint="Input RSS feed here"
+            tools:text = "@string/lorem_ipsum"
+            />
     </android.support.design.widget.TextInputLayout>
+
+    <Button
+        android:id="@+id/cancel"
+        android:textSize="@dimen/title_text_size"
+        android:text="cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+        android:layout_marginRight="24dp"
+        android:layout_marginLeft="32dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:background="?attr/selectableItemBackground"
+        app:layout_constraintRight_toLeftOf="@+id/save_button"
+        app:layout_constraintHorizontal_bias="1.0"
+        />
+
+    <Button
+        android:id="@+id/save_button"
+        android:textSize="@dimen/title_text_size"
+        android:text="@string/save_feed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
+        android:layout_marginRight="24dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        android:background="?attr/selectableItemBackground"
+        />
+
 
 </android.support.constraint.ConstraintLayout>
