--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="divider_color">#7e7e7e</color>
+    <color name="textColorPrimary">#161616</color>
 </resources>
