--- a/app/src/main/res/layout/preview.xml
+++ b/app/src/main/res/layout/preview.xml
@@ -29,7 +29,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         tools:text="title"
-        />
+        android:layout_marginTop="8dp"
+        app:layout_constraintHorizontal_bias="0.529"/>
 
     <TextView
         android:id="@+id/author"
@@ -57,7 +58,7 @@
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/author"
-        tools:text="date"
+        tools:text="25.05.2017"
         android:layout_marginEnd="8dp"/>
 
 
@@ -66,12 +67,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             tools:src="@mipmap/ic_launcher"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/date"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintHorizontal_bias="0.529"/>
 
         <TextView
             android:id="@+id/description"
@@ -79,12 +81,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="@string/lorem_ipsum"
-
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/image"
 
-            />
+            android:layout_marginTop="8dp"
+            app:layout_constraintHorizontal_bias="0.47"
+            app:layout_constraintVertical_bias="0.0"/>
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
