--- a/app/src/main/res/values-sw720dp-port/dimens.xml
+++ b/app/src/main/res/values-sw720dp-port/dimens.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="list_pane_width">360dp</dimen>
+    <dimen name="list_pane_width">460dp</dimen>
+
+    <dimen name="text_medium_size">18sp</dimen>
+    <dimen name="text_regular_size">20sp</dimen>
+    <dimen name="title_text_size">22sp</dimen>
 </resources>
